service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 6080
      protocol: TCP
  selector:
    app: httpserver
